--- a/index.html
+++ b/index.html
@@ -195,8 +195,11 @@
         <div class="slide"><img src="photo7.jpg" alt="Memory 7"></div>
         <div class="slide"><img src="photo8.jpg" alt="Memory 8"></div>
         <div class="slide"><img src="photo9.jpg" alt="Memory 9"></div>
+        <div class="slide"><img src="photo10.jpg" alt="Memory 10"></div>
+        <div class="slide"><img src="photo11.jpg" alt="Memory 11"></div>
+        <div class="slide"><img src="photo12.jpg" alt="Memory 12"></div>
         <div class="slide">
-          <video src="outro.mp4" controls playsinline preload="auto" poster="photo9.jpg"></video>
+          <video src="outro.mp4" controls playsinline preload="auto" poster="photo12.jpg"></video>
         </div>
       </div>
       <button class="slider-arrow right" id="slider-next">&#8594;</button>
