--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
         <div class="slide"><img src="photo10.jpg" alt="Memory 10"></div>
         <div class="slide"><img src="photo11.jpg" alt="Memory 11"></div>
         <div class="slide"><img src="photo12.jpg" alt="Memory 12"></div>
+        <div class="slide"><img src="photo13.jpg" alt="Memory 13"></div>
+        <div class="slide"><img src="photo14.jpg" alt="Memory 14"></div>
+        <div class="slide"><img src="photo15.jpg" alt="Memory 15"></div>
+        <div class="slide"><img src="photo16.jpg" alt="Memory 16"></div>
         <div class="slide">
           <video src="outro.mp4" controls playsinline preload="auto" poster="photo12.jpg"></video>
         </div>
